Allow plugin read access to dependant plugin modules